fixed everything todo